# bmd

bmd/: .cproject  .project  Makefile  README  acinclude.m4  aclocal.m4  bmd.spec  build.sh  build_oracle.sh  buildonly.sh  config.cache  config.status  configure.in  configure.in_old  cscope.files  cscope.out  libtool  rob_release.sh
bmd/deploy/awizo_soap_2.3/: awizo_soap_server.conf
bmd/deploy/logserver_2.3/: 01_logdb.sql  02_tblob.sql  log_soap_server.conf  logbroker.conf  logclient.conf  logserver.conf
bmd/doc/: .~lock.07_Instalacja serwera SOE na 64bit.doc#  07_Instalacja serwera SOE na 64bit.doc
bmd/doc/BMD_server_logow/: 20080317_serwery_logow_wersja_robocza_posadowienia.doc  20080625-LOGI-robocza-instrukcja-posadowienia-TKl-1.0.doc  Generowanie podpisanych logow w BMD.doc  logi.ppt  polityka_logowania.doc  weryfikator_logow.doc  weryfikator_logow.odt
bmd/doc/serwer_awizo/: odtwarzanie_polaczenia_bazodanowego_mail_sender.txt  serwer-Awizo_Dokumentacja_administratora-1.0.doc
bmd/include/: fix_includes.sh  quote_includes.sh
bmd/include/pkcs11/: cryptoki.h  pkcs11.h  pkcs11f.h  pkcs11t.h
bmd/src/: Makefile  Makefile.am  bmdlogserver  config.h  config.h.in
bmd/src/aclocal/: check.m4  db2.m4  mssql.m4  oracle.m4  pgsql.m4  wxwin.m4
bmd/src/bmd_ks/: Makefile  Makefile.am  bmd_ks  main.c  svc_conf.c  svc_delete.c  svc_install.c  svc_log.c  svc_main.c  svc_net.c  svc_pkcs11.c  svc_request.c  svc_response.c  svc_scm.c  svc_tcp.c  svc_thread.c  svc_utils.c
bmd/src/invoice_conv/: list.c
bmd/src/libCppJavaApiWrapper/: CppJavaApiWrapper.cpp  CppJavaApiWrapper.h  JvmEnvironment.cpp  JvmEnvironment.h  Makefile  Makefile.am  proCertumJvmEnv.cpp  proCertumJvmEnv.h
bmd/src/libbmd/: Makefile  Makefile.am  libbmd.c  libbmd_bmdattr.c  libbmd_bmdinfo.c  libbmd_datagram.c  libbmd_datagramset.c  libbmd_genbuf.c  libbmd_internal.c  libbmd_lob_request.c  libbmd_login.c  libbmd_main.c  libbmd_nop.c  libbmd_send.c  libbmd_send_internal.c  libbmd_send_lob.c  libbmd_userform.c  libbmd_utils.c
bmd/src/libbmdX509/: Makefile  Makefile.am  libbmdX509.c
bmd/src/libbmdaa2/: Makefile  Makefile.am
bmd/src/libbmdarchpack/: Makefile  Makefile.am  config.c  gen_metadata.c  list.c  main.c  save_file.c
bmd/src/libbmdasn1_common/: AAControls.c  ACClearAttrs.c  AcceptableResponses.c  AccessDescription.c  Accuracy.c  AdministrationDomainName.c  AlgorithmIdentifier.c  AnotherName.c  ArchiveCutoff.c  AttCertIssuer.c  AttCertValidityPeriod.c  AttCertVersion.c  AttrSpec.c  Attribute.c  AttributeCertificate.c  AttributeCertificateInfo.c  AttributeType.c  AttributeTypeAndValue.c  AttributeValue.c  AttributesSequence.c  AuthAttributes.c  AuthenticatedData.c  AuthorityInfoAccessSyntax.c  AuthorityKeyIdentifier.c  BMDGroup.c  BMDGroupPair.c  BMDGroupPairList.c  BMDGroups.c  BMDLogElements.c  BMDkeyIV.c  BaseCRLNumber.c  BaseDistance.c  BasicConstraints.c  BasicOCSPResponse.c  BuiltInDomainDefinedAttribute.c  BuiltInDomainDefinedAttributes.c  BuiltInStandardAttributes.c  CBCParameter.c  CMSVersion.c  CPSuri.c  (+234 more)
bmd/src/libbmdasn1_core/: ANY.c  BIT_STRING.c  BMPString.c  BOOLEAN.c  ENUMERATED.c  GeneralString.c  GeneralizedTime.c  GraphicString.c  IA5String.c  INTEGER.c  ISO646String.c  Makefile  Makefile.am  NULL.c  NativeEnumerated.c  NativeInteger.c  NativeReal.c  NumericString.c  OBJECT_IDENTIFIER.c  OCTET_STRING.c  ObjectDescriptor.c  PrintableString.c  REAL.c  RELATIVE-OID.c  T61String.c  TeletexString.c  UTCTime.c  UTF8String.c  UniversalString.c  VideotexString.c  VisibleString.c  asn_SEQUENCE_OF.c  asn_SET_OF.c  asn_codecs_prim.c  ber_decoder.c  ber_tlv_length.c  ber_tlv_tag.c  constr_CHOICE.c  constr_SEQUENCE.c  constr_SEQUENCE_OF.c  (+11 more)
bmd/src/libbmdbase64/: Makefile  Makefile.am  cdecode.c  cencode.c  libbmdbase64.c
bmd/src/libbmdcms/: Makefile  Makefile.am  cms_enveloped_data.c  cms_extension.c  cms_signed_data.c  cms_signed_data_utils.c  cms_utils.c  cms_x509_utils.c  libbmdcms.c  testSP.c  test_attrs.c
bmd/src/libbmdconfig/: Makefile  Makefile.am  bmdconfig.c  conf2db.c  create_configdb.sql  db2conf.c  dict.c  do_config.c  for_db.c  hash_pcre.c  lista.c  mem_list.c  parse_mem.c  str.c  test_confdb.c  test_config.c  test_dictionary.h  test_file.conf  testdb.sql  update_file.c
bmd/src/libbmdcrl/: Makefile  Makefile.am  libbmdcrl.c
bmd/src/libbmdcurl/: Makefile  Makefile.am  curl.c
bmd/src/libbmddb/: Makefile  Makefile.am  libbmddb.c  libbmddb.tar
bmd/src/libbmddialogs/: Makefile  Makefile.am  bmdCertDialog.cpp  bmdCountersSummaryDialog.cpp  libbmddialogs.cpp  makefile.old
bmd/src/libbmddvcs/: Makefile  Makefile.am  dvcs.c  dvcsTester.c  dvcs_api.c  dvcs_externalsig.c
bmd/src/libbmderr/: Makefile  Makefile.am  err_dict.c  err_stack.c  libbmderr.c  str2int.c
bmd/src/libbmdglobals/: Makefile  Makefile.am  libbmdglobals.c  libbmdglobals_data_dict.c
bmd/src/libbmdks/: Makefile  Makefile.am
bmd/src/libbmdlob/: Makefile  Makefile.am  libbmdlob.c  lob_create.c  lob_recv.c  lob_send.c  lob_utils.c
bmd/src/libbmdlog/: Makefile  Makefile.am  client.conf  libbmdlog.c
bmd/src/libbmdmail/: Makefile  Makefile.am  bmdmail.c  libbmdmail.c  mail_send.c  mail_utils.c
bmd/src/libbmdmime/: Makefile  Makefile.am  attachment_utils.c  libbmdmime.c  p7m_mime.c  p7m_mime_utils.c  p7s.c  p7s_internal.c  test7s.c
bmd/src/libbmdnet/: Makefile  Makefile.am  _tests.c  libbmdnet.c  libbmdnet_connect.c  libbmdnet_create.c  libbmdnet_dllmain.c  libbmdnet_init.c  libbmdnet_recv.c  libbmdnet_send.c  libbmdnet_server.c  mech_openssl_bio.c  mech_proxy_connect.c  mech_socks4.c  mech_socks4a.c  mech_socks5.c  net_mechanisms.h  ntlm.c
bmd/src/libbmdpkcs11/: Makefile  Makefile.am  libbmdpkcs11.c  makefile-freebsd  makefile-sun  makefile.old  pkcs11_certs.c  pkcs11_decrypt.c  pkcs11_finalize.c  pkcs11_init.c  pkcs11_internal.c  pkcs11_privkey.c  pkcs11_sign.c
bmd/src/libbmdpkcs12/: Makefile  Makefile.am  libbmdpkcs12.c  makefile-freebsd  makefile-sun
bmd/src/libbmdpki/: Makefile  Makefile.am  bmdpki_sym.c  cert_api.c  cert_path_api.c  cms_api.c  cms_internal.c  ctx_api.c  ctx_internal.c  hash_api.c  (+13 more)
(+2967 files in other folders)
