AM_LDFLAGS=-release 1.3
lib_LTLIBRARIES = libbks.la 
libbks_la_SOURCES =  main.c svc_conf.c svc_delete.c svc_install.c svc_log.c svc_main.c svc_net.c svc_pkcs11.c svc_request.c svc_response.c
libbks_la_SOURCES += svc_scm.c svc_tcp.c svc_thread.c svc_utils.c
libbks_la_LIBADD = ../libbmdks/libbmdks.la
libbks_la_CPPFLAGS = -Wall -Werror 
