AM_LDFLAGS=-release 2.3 
lib_LTLIBRARIES=libbmdarchpack.la 

libbmdarchpack_la_SOURCES=gen_metadata.c config.c save_file.c main.c
libbmdarchpack_la_LIBADD = ../libbmdutils/libbmdutils.la ../libbmd/libbmd.la ../libbmdconfig/libbmdconfig.la \
	../libbmdasn1_common/libbmdasn1_common.la ../libbmdasn1_core/libbmdasn1_core.la \
	../libbmdzlib/libbmdzlib.la


