AM_LDFLAGS=-release 2.3 

lib_LTLIBRARIES = libbmdasn1_core.la 

INCLUDES = ${INCDIR} 

libbmdasn1_core_la_SOURCES = \
ANY.c              BOOLEAN.c             ENUMERATED.c       Makefile.am          OCTET_STRING.c     UTCTime.c	\
asn_codecs_prim.c  constraints.c         GeneralizedTime.c  Makefile.in          per_decoder.c      UTF8String.c	\
asn_SEQUENCE_OF.c  constr_CHOICE.c       GeneralString.c    NativeEnumerated.c   per_support.c      VideotexString.c	\
asn_SET_OF.c       constr_SEQUENCE.c     GraphicString.c    NativeInteger.c      PrintableString.c  VisibleString.c	\
ber_decoder.c      constr_SEQUENCE_OF.c  IA5String.c        NativeReal.c         REAL.c             xer_decoder.c	\
ber_tlv_length.c   constr_SET.c          INTEGER.c          NULL.c               RELATIVE-OID.c     xer_encoder.c	\
ber_tlv_tag.c      constr_SET_OF.c       ISO646String.c     NumericString.c      T61String.c        xer_support.c	\
BIT_STRING.c       constr_TYPE.c         linuxwindows.c     ObjectDescriptor.c   TeletexString.c	\
BMPString.c        der_encoder.c         Makefile           OBJECT_IDENTIFIER.c  UniversalString.c	





